--- a/index.html
+++ b/index.html
@@ -3218,7 +3218,7 @@
         <i class="fas fa-calendar-week card-icon"></i>
         <h3 class="card-title">الخطة الزمنية</h3>
       </div>
-      <div class"card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/dfgtte2/%D8%AA%D8%AD%D8%B6%D9%8A%D8%B1-%D8%A7%D9%84%D9%85%D9%86%D8%B5%D8%A9?authuser=1" data-title="تحضير المنصة">
+      <div class="card" style="animation-delay: 0.25s;" data-url="https://sites.google.com/view/dfgtte2/%D8%AA%D8%AD%D8%B6%D9%8A%D8%B1-%D8%A7%D9%84%D9%85%D9%86%D8%B5%D8%A9?authuser=1" data-title="تحضير المنصة">
         <i class="fas fa-chalkboard card-icon"></i>
         <h3 class="card-title">تحضير المنصة</h3>
       </div>
@@ -4221,3 +4221,4 @@
 </script>
 </body>
 </html>
+
